--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>中药材土壤与重金属数据展示系统</title>
     <link rel="stylesheet" href="libs/leaflet/leaflet.css" />
-    <script defer src="libs/leaflet/leaflet.js"></script>
+    <script src="libs/leaflet/leaflet.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
