--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>中药材土壤与重金属数据展示系统</title>
+    <title>江苏道地药材重金属及有害元素安全监测数据库</title>
     <link rel="stylesheet" href="libs/leaflet/leaflet.css" />
     <script src="libs/leaflet/leaflet.js"></script>
     <link rel="stylesheet" href="style.css" />
