Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <nav>
-        <h1>中药材土壤与重金属数据展示</h1>
+        <h1>江苏道地药材重金属及有害元素安全监测数据库</h1>
         <ul>
           <li><a href="#/home">首页</a></li>
           <li><a href="#/table">完整数据表</a></li>
